NoneType object has no attribute lower

--- a/gitops/apps/home-assistant/scripts-configmap.yaml
+++ b/gitops/apps/home-assistant/scripts-configmap.yaml
@@ -2,29 +2,23 @@ apiVersion: v1
 data:
   power_on.yaml: |
     scheduled_light_on:
-      alias: Scheduled Light On (by room key; uses optional per-room scene overrides)
+      alias: Scheduled Light On (safe)
       mode: restart
       fields:
         room_key:
-          description: Short name used in scene IDs (e.g., 'living_room')
+          description: e.g. living_room
           example: living_room
         custom_schedule_enabled:
-          description: input_boolean that enables per-room time windows
           required: false
         custom_s1_start:
-          description: input_datetime Morning start (time-only)
           required: false
         custom_s2_start:
-          description: input_datetime Day start (time-only)
           required: false
         custom_s3_start:
-          description: input_datetime Evening start (time-only)
           required: false
         custom_s4_start:
-          description: input_datetime Night start (time-only)
           required: false
         transition:
-          description: Optional fade time in seconds
           required: false
       sequence:
         - variables:
@@ -36,18 +30,19 @@ data:
             use_custom: >-
               {{ custom_schedule_enabled is defined and is_state(custom_schedule_enabled, 'on') }}
 
+            # Use states() *safely*; guard unknown/unavailable/empty
             s1_str: >-
               {% set v = states(custom_s1_start) if use_custom else default_s1 %}
-              {% if v in ['unknown','unavailable',''] %}{{ default_s1 }}{% else %}{{ v }}{% endif %}
+              {{ default_s1 if v in ['unknown','unavailable','', None] else v }}
             s2_str: >-
               {% set v = states(custom_s2_start) if use_custom else default_s2 %}
-              {% if v in ['unknown','unavailable',''] %}{{ default_s2 }}{% else %}{{ v }}{% endif %}
+              {{ default_s2 if v in ['unknown','unavailable','', None] else v }}
             s3_str: >-
               {% set v = states(custom_s3_start) if use_custom else default_s3 %}
-              {% if v in ['unknown','unavailable',''] %}{{ default_s3 }}{% else %}{{ v }}{% endif %}
+              {{ default_s3 if v in ['unknown','unavailable','', None] else v }}
             s4_str: >-
               {% set v = states(custom_s4_start) if use_custom else default_s4 %}
-              {% if v in ['unknown','unavailable',''] %}{{ default_s4 }}{% else %}{{ v }}{% endif %}
+              {{ default_s4 if v in ['unknown','unavailable','', None] else v }}
 
             now_ts: "{{ as_timestamp(now()) }}"
             s1: "{{ as_timestamp(today_at(s1_str)) }}"
@@ -61,66 +56,78 @@ data:
               {% elif now_ts >= s3 and now_ts < s4 %}evening
               {% else %}night{% endif %}
 
-            override_entity_id: >-
-              {% set sel = 'input_select.' ~ room_key ~ '_' ~ slot ~ '_scene' %}
-              {% if states(sel) not in ['unknown','unavailable', None, ''] %}
-                {{ states(sel) }}
-              {% else %}{{ '' }}{% endif %}
+            # If the input_select exists and contains a valid scene entity_id, use it.
+            _override_select: "{{ 'input_select.' ~ room_key ~ '_' ~ slot ~ '_scene' }}"
+            _override_val: >-
+              {% set val = states(_override_select) %}
+              {{ '' if val in ['unknown','unavailable','', None] else val }}
 
             default_scene_entity_id: "scene.{{ room_key }}_{{ slot }}"
-            scene_to_activate: "{{ override_entity_id if override_entity_id else default_scene_entity_id }}"
-        - service: scene.turn_on
-          data:
-            transition: "{{ transition | default(0) }}"
-          target:
-            entity_id: "{{ scene_to_activate }}"
+            scene_to_activate: >-
+              {% set candidate = _override_val if _override_val else default_scene_entity_id %}
+              {{ candidate }}
+
+            # Verify the candidate actually exists in HA's state machine
+            scene_exists: >-
+              {{ scene_to_activate in states.scene | map(attribute='entity_id') | list }}
+        - choose:
+            - conditions: "{{ scene_exists }}"
+              sequence:
+                - service: scene.turn_on
+                  data:
+                    transition: "{{ transition | default(0) }}"
+                  target:
+                    entity_id: "{{ scene_to_activate }}"
+          default:
+            # Fallback to a best-effort: turn on the room's lights if scene missing
+            - service: light.turn_on
+              target:
+                entity_id: "light.{{ room_key }}_lights"
+            - service: logbook.log
+              data:
+                name: "scheduled_light_on"
+                message: >-
+                  Scene '{{ scene_to_activate }}' not found; fell back to light.turn_on
+                entity_id: "light.{{ room_key }}_lights"
   room_toggle.yaml: |
     room_toggle:
-      alias: Room Toggle (scheduled when turning on)
-      mode: restart
+      alias: Room Toggle (smart)
+      mode: parallel
       fields:
         room_key:
-          description: Room key used by scenes
+          description: Short name used in scene IDs (e.g., 'living_room')
+          example: living_room
         target_lights:
-          description: Target lights (entity_id or list, or a target object with entity_id)
-        custom_schedule_enabled:
-          required: false
-        custom_s1_start:
-          required: false
-        custom_s2_start:
-          required: false
-        custom_s3_start:
-          required: false
-        custom_s4_start:
-          required: false
-
+          description: Entity or group of lights to control
+          example: light.living_room_lights
       sequence:
         - variables:
-            targets: >-
+            # Accept string, list, or target dict; normalize to list of entity_ids
+            _entities: >-
               {% if target_lights is mapping and 'entity_id' in target_lights %}
                 {{ target_lights.entity_id }}
               {% else %}
                 {{ target_lights }}
               {% endif %}
-            any_on: >-
-              {{ expand(targets) | selectattr('state','eq','on') | list | count > 0 if targets else false }}
-
+            lights: >-
+              {% if _entities is string %}
+                {{ expand([_entities]) }}
+              {% elif _entities is sequence %}
+                {{ expand(_entities) }}
+              {% else %}
+                {{ expand([]) }}
+              {% endif %}
+            any_on: "{{ lights | selectattr('state','eq','on') | list | count > 0 }}"
         - choose:
             - conditions: "{{ any_on }}"
               sequence:
                 - service: light.turn_off
                   target:
-                    entity_id: "{{ targets }}"
-            - conditions: []
-              sequence:
-                - service: script.scheduled_light_on
-                  data:
-                    room_key: "{{ room_key }}"
-                    custom_schedule_enabled: "{{ custom_schedule_enabled | default(none) }}"
-                    custom_s1_start: "{{ custom_s1_start | default(none) }}"
-                    custom_s2_start: "{{ custom_s2_start | default(none) }}"
-                    custom_s3_start: "{{ custom_s3_start | default(none) }}"
-                    custom_s4_start: "{{ custom_s4_start | default(none) }}"
+                    entity_id: "{{ lights | map(attribute='entity_id') | list }}"
+          default:
+            - service: script.scheduled_light_on
+              data:
+                room_key: "{{ room_key }}"
 kind: ConfigMap
 metadata:
   name: homeassistant-scripts
