--- a/gitops/apps/home-assistant/scripts-configmap.yaml
+++ b/gitops/apps/home-assistant/scripts-configmap.yaml
@@ -12,9 +12,7 @@ data:
         custom_s3_start: { required: false }
         custom_s4_start: { required: false }
         transition: { required: false }
-        fallback_lights:
-          description: Optional light/group to turn on if scene missing
-          required: false
+        fallback_lights: { required: false }
       sequence:
         - variables:
             default_s1: "06:00:00"
@@ -57,21 +55,14 @@ data:
 
             default_scene_entity_id: "scene.{{ room_key }}_{{ slot }}"
             scene_to_activate: "{{ _override_val if _override_val else default_scene_entity_id }}"
+            scene_exists: "{{ scene_to_activate in (states.scene | map(attribute='entity_id') | list) }}"
 
-            all_scenes: "{{ states.scene | map(attribute='entity_id') | list }}"
-            scene_exists: "{{ scene_to_activate in all_scenes }}"
-
-            # Dynamic fallback: prefer light.<room_key>, then light.<room_key>_lights, else provided fallback_lights
-            _light_room: "light.{{ room_key }}"
-            _light_room_lights: "light.{{ room_key }}_lights"
-            _all_lights: "{{ states.light | map(attribute='entity_id') | list }}"
+            preferred_room_light: "light.{{ room_key }}"
+            all_lights: "{{ states.light | map(attribute='entity_id') | list }}"
             dynamic_fallback: >-
-              {% if _light_room in _all_lights %}{{ _light_room }}
-              {% elif _light_room_lights in _all_lights %}{{ _light_room_lights }}
-              {% elif fallback_lights is defined and fallback_lights and fallback_lights in _all_lights %}
-                {{ fallback_lights }}
-              {% else %}{{ '' }}
-              {% endif %}
+              {% if preferred_room_light in all_lights %}{{ preferred_room_light }}
+              {% elif fallback_lights is defined and fallback_lights in all_lights %}{{ fallback_lights }}
+              {% else %}{{ '' }}{% endif %}
         - choose:
             - conditions: "{{ scene_exists }}"
               sequence:
@@ -103,40 +94,40 @@ data:
       mode: parallel
       fields:
         room_key:
-          description: e.g., living_room
+          description: Short name for the room (e.g., living_room)
         target_lights:
-          description: Light or group to control (entity_id, list, or target)
+          description: Entity or group to control (entity_id, list, or target)
       sequence:
         - variables:
-            # Normalize to a flat list of entity_ids without losing the original group
+            # Normalize to a list but keep original ids for targeting
             _ids: >-
               {% if target_lights is mapping and 'entity_id' in target_lights %}
                 {{ target_lights.entity_id }}
               {% else %}
                 {{ target_lights }}
               {% endif %}
-            _list: >-
-              {% if _ids is string %}{{ [_ids] }}
-              {% elif _ids is sequence %}{{ _ids }}
-              {% else %}{{ [] }}
+            id_list: >-
+              {% if _ids is string %}
+                {{ [_ids] }}
+              {% elif _ids is sequence and _ids is not string %}
+                {{ _ids | list }}
+              {% else %}
+                {{ [] }}
               {% endif %}
-            # Expanded states (for member lights) plus originals (for group state)
-            _expanded: "{{ expand(_list) }}"
-            _expanded_ids: "{{ _expanded | map(attribute='entity_id') | list }}"
-            _all_ids: "{{ (_list + _expanded_ids) | unique | list }}"
-            any_on: >-
-              {{ expand(_all_ids) | selectattr('state','eq','on') | list | count > 0 }}
+            expanded: "{{ expand(id_list) }}"
+            any_on: "{{ expanded | selectattr('state','eq','on') | list | count > 0 }}"
         - choose:
             - conditions: "{{ any_on }}"
               sequence:
                 - service: light.turn_off
                   target:
-                    entity_id: "{{ _all_ids }}"
+                    entity_id: "{{ id_list }}"
           default:
             - service: script.scheduled_light_on
               data:
                 room_key: "{{ room_key }}"
-                fallback_lights: "{{ _list | first if _list|length>0 else '' }}"
+                # provide usable fallback if scene is missing
+                fallback_lights: "{{ id_list[0] if id_list|length>0 else '' }}"
 kind: ConfigMap
 metadata:
   name: homeassistant-scripts
